[package]
name = "cch23-ric"
version = "4.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["json", "multipart"] }
features = { version = "0.10.0", default-features = false }

# day 4
serde = "1.0.193"

# day 11
lodepng = "3.9.2"
tower-http = { version = "0.4.0", features = ["fs"] }

# day 8
reqwest = { version = "0.11.22", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1.38.0", default-features = false, features = ["rt-multi-thread"] }

keshvar = { version = "0.3.0", default-features = false, features = ["geo", "americas", "oceania", "region-africa", "region-antarctica", "region-asia", "region-europe"] }
s2 = { version = "0.0.12", default-features = false }
shuttle-axum = "0.34.0"
shuttle-runtime = "0.34.0"
tracing = "0.1.40"
