[package]
name = "laker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
feed-rs = "1"
json-feed-model = "0.2"
lol_html = "0.3"
scraper = { version = "0.13", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = { version = "0.14.4", features = ["easy"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
ureq = "2"
