[package]
name = "wrong-dns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { version = "0.7.0", default-features = false, features = ["resolv"] }
lexopt = { version = "0.2.1", default-features = false }
tokio = { version = "1.24.2", default-features = false, features = ["rt"] }
